# EPIC-QEC

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: core_logic.md  getting_started.ipynb  introduction.md  qec_gadget.md  qec_primitives.md
docs/example_notebooks/: automorphisms.ipynb  autqec_integration.ipynb  homol_product.ipynb  homol_product_cnot.ipynb
docs/example_notebooks/cnot_benchmark_result/logical_rates/: baseline_and_plot.ipynb  hgp58_16_3_cnot.ipynb  ls_cnot.ipynb  steane_cnot.ipynb  toric_cnot.ipynb
src/debug/: warnings.py
src/epic/: __init__.py
src/epic/core/: __init__.py
src/epic/core/compilation/: __init__.py  compilation_context.py  compiled_experiment.py  measurement_record.py  qec_compiler.py  quantum_memory.py
src/epic/core/data_structure/: __init__.py  graph_algorithm.py  pauli.py  physical_qubit.py  tanner_graph.py  tanner_node.py
src/epic/modules/: __init__.py
src/etic/: __init__.py
tests/core/: conftest.py
tests/core/compilation/: test_compilation_context.py  test_compiled_experiment.py  test_measurement_record.py  test_qec_compiler.py  test_quantum_memory.py
tests/core/data_structure/: test_graph_algorithm.py  test_pauli.py  test_tanner_graph.py
tests/core/language/: test_language_imports.py
tests/core/qec_object/: conftest.py  test_logical_operator.py  test_logical_qubit.py  test_measurement_detector_observable.py  test_stabilizer_code.py
tests/core/qec_primitives/: test_qec_primitives_imports.py
tests/debug/: test_warnings.py
tests/fixtures/: qec_objects.py  tanner_graph.py
(+72 files in other folders)
